pkg/main/default/objects/ProductSettings__c/ProductSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Products</label>
</CustomObject>