pkg/main/default/objects/ProductSettings__c/fields/Features__c.field-meta.xml
<CustomField>
	<fullName>Features__c</fullName>
	<defaultValue>0</defaultValue>
	<description>Feature Flags</description>
	<inlineHelpText>Feature Flags</inlineHelpText>
	<label>Feature Flags</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>