pkg/main/default/objects/ProductSettings__c/fields/IsTrial__c.field-meta.xml
<CustomField>
	<fullName>IsTrial__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is Trial</label>
	<type>Checkbox</type>
</CustomField>