pkg/main/default/objects/ProductSettings__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<label>Product Status</label>
	<length>20</length>
	<type>Text</type>
</CustomField>