pkg/main/default/objects/ProductSettings__c/fields/TrialExpires__c.field-meta.xml
<CustomField>
	<fullName>TrialExpires__c</fullName>
	<description>Product Trial Expiration</description>
	<inlineHelpText>Product Trial Expiration</inlineHelpText>
	<label>Product Trial Expiration</label>
	<type>Date</type>
</CustomField>